# sqlite-vec

bindings/rust/: Cargo.toml  build.rs  sqlite-vec.h
bindings/rust/src/: lib.rs
